--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="container">
     <h1>Welcome to Y-Technologies Testing Website</h1>
     <p>Explore our testing services and tools</p>
-    <a href="https://your-testing-platform.com">Start Testing Now</a>
+    <a href="#">Start Testing Now</a>
   </div>
 </body>
 </html>
